-
Bug
-
Resolution: Done
-
P2: Important
-
5.6.0 Alpha
-
None
-
Mageia Linux Cauldron x86_64, Plasma 5
GCC 5.2.1
-
qtdeclarative: d3f8a608e8e00915df38a2a43496127a93b5bcaf
I use compiled Qt from git and when I do any action, that displays menu, I see the following warning:
file:///mnt/store/Development/qt5.6_git/qml/QtQuick/Controls/Private/ScrollViewHelper.qml:192:9: QML Binding: Property 'raised' does not exist on Item.
To reproduce, create template QtQuick.Controls project and click on menu bar.
In Qt 5.5 I see no this warning.
- is duplicated by
-
QTBUG-48887 Qml binding error in ScrollViewHelper.qml
-
- Closed
-