src/qml/types/qqmlbind.cpp
@@ -69,7 +69,7 @@ public:
 
 void QQmlBindPrivate::validate(QObject *binding) const
 {
-    if (!obj)
+    if (!obj || (when.isValid() && !when))
         return;
 
     if (!prop.isValid()) {
@@ -179,6 +179,8 @@ void QQmlBind::setWhen(bool v)
         return;
 
     d->when = v;
+    if (v && d->componentComplete)
+        d->validate(this);
     eval();
 }
 
